--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/*
+=============== 
+Variables and Global Styles will go here
+===============
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
